Исправил проект NoteService ,в нем исправил ошибку "Stream.toList()" method should be used instead of "collectors".